--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 
 </head>
 
-<body>
+  
+<body bgcolor = "#c88adb" text = "white">
 <h1>MYSITE</h1>
-<h3>hello this is my number</h3>
+<h3>hello this is <br><br><br> my number</h3>
 <p> bitch you ass</p>
 </body>
 </html>
